# childshield

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
apps/desktop/: ChildShield.spec  README.md  pyproject.toml
apps/desktop/childshield/: __init__.py  __main__.py  age_estimation.py  analysis.py  blur.py  detection.py
apps/desktop/childshield/gui/: canvas.py  faces_panel.py  icons.py  main_window.py  style.qss
apps/desktop/packaging/: ChildShield.icns  entitlements.plist
apps/desktop/tools/: README.md  build_icons.py  convert_age_model.py  sign_macos.sh
apps/extension/: README.md
apps/safari/: README.md
